--- a/public/index.html
+++ b/public/index.html
@@ -23,32 +23,33 @@
       type="text/css"
     />
     <link
+    rel="stylesheet"
+    href="%PUBLIC_URL%/css/elegant-icons.css"
+    type="text/css"
+    />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/plyr.css" type="text/css" />
+    <link
+    rel="stylesheet"
+    href="%PUBLIC_URL%/css/nice-select.css"
+    type="text/css"
+    />
+    
+    <!-- <link
+    rel="stylesheet"
+    href="%PUBLIC_URL%/css/owl.carousel.min.css"
+    type="text/css"
+    /> -->
+    <link
+    rel="stylesheet"
+    href="%PUBLIC_URL%/css/slicknav.min.css"
+    type="text/css"
+    />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" type="text/css" />
+    <link
       rel="stylesheet"
       href="%PUBLIC_URL%/css/font-awesome.min.css"
       type="text/css"
     />
-    <link
-      rel="stylesheet"
-      href="%PUBLIC_URL%/css/elegant-icons.css"
-      type="text/css"
-    />
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/plyr.css" type="text/css" />
-    <link
-      rel="stylesheet"
-      href="%PUBLIC_URL%/css/nice-select.css"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="%PUBLIC_URL%/css/owl.carousel.min.css"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="%PUBLIC_URL%/css/slicknav.min.css"
-      type="text/css"
-    />
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" type="text/css" />
     <title>React App</title>
   </head>
   <body>
