--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
       href="%PUBLIC_URL%/css/font-awesome.min.css"
       type="text/css"
     />
-    <title>React App</title>
+    <title>Quản lý anime - Group 02</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
